--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header class="border">
       <div class="container main-nav">
@@ -34,13 +35,19 @@
 
         <ul class="contacts">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="contact-link icon-mail">
+              <svg class="link-icon" width="16" height="12">
+                <use href="./images/sprite.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contact-link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="contact-link icon-smartphone">
+              <svg class="link-icon" width="10" height="16">
+                <use href="./images/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -48,18 +55,25 @@
     </header>
     <main>
       <!-- Герой -->
-      <section class="hero">
+
+      <section class="hero overlay">
         <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button type="button" class="button primery">Заказать услугу</button>
       </section>
 
       <!-- Особенности  -->
+
       <section class="section">
         <div class="container">
-          <h2 class="">Наши особенности</h2>
+          <h2 class="visually-hidden">Наши особенности</h2>
 
           <ul class="feature-list">
             <li class="item">
+              <div class="feature-icon-box">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -67,6 +81,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="feature-icon-box">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -74,6 +93,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="feature-icon-box">
+                <svg class="feature-icon">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -81,6 +105,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="feature-icon-box">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -92,6 +121,7 @@
       </section>
 
       <!-- Чем мы занимаемся -->
+
       <section class="section">
         <div class="container">
           <h2 class="section-title centered">Чем мы занимаемся</h2>
@@ -122,6 +152,7 @@
       </section>
 
       <!-- Наша команда -->
+
       <section class="section secondary-bg-color">
         <div class="container">
           <h2 class="section-title centered">Наша команда</h2>
@@ -134,11 +165,66 @@
               />
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="text">Product Designer</p>
+
+              <ul class="command-links-list">
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="instagram">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="twitter">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="facebook">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="linkedin">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img src="./images/card-2.jpg" alt="Ольга Репина" width="270" />
               <h3 class="title">Ольга Репина</h3>
               <p class="text">Frontend Developer</p>
+              <ul class="command-links-list">
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="instagram">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="twitter">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="facebook">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="linkedin">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img
@@ -148,11 +234,118 @@
               />
               <h3 class="title">Николай Тарасов</h3>
               <p class="text">Marketing</p>
+              <ul class="command-links-list">
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="instagram">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="twitter">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="facebook">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="linkedin">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
+
             <li class="item">
               <img src="./images/card-4.jpg" alt="Михаил Ермаков" width="270" />
               <h3 class="title">Михаил Ермаков</h3>
               <p class="text">UI Designer</p>
+              <ul class="command-links-list">
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="instagram">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="twitter">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="facebook">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="item">
+                  <a href="" class="command-social-link" aria-label="linkedin">
+                    <svg class="command-icon" width="20" height="20">
+                      <use href="./images/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Клиенты -->
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title centered">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="item">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="client-link">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/sprite.svg#logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -160,22 +353,59 @@
     </main>
 
     <footer class="footer-section">
-      <div class="container">
-        <a href="./index.html" class="logo footer-logo"
-          ><span class="accent-footer-logo">Web</span>Studio</a
-        >
-
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-
-        <address>
-          <a href="mailto:info@devstudio.com" class="footer-contact-link"
-            >info@devstudio.com</a
+      <div class="container flex-footer">
+        <div class="address-block">
+          <a href="./index.html" class="logo footer-logo"
+            ><span class="accent-footer-logo">Web</span>Studio</a
           >
-          <br />
-          <a href="tel:+380961111111" class="footer-contact-link"
-            >+38 096 111 11 11</a
-          >
-        </address>
+
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+
+          <address class="address">
+            <a href="mailto:info@devstudio.com" class="footer-contact-link"
+              >info@devstudio.com</a
+            >
+            <br />
+            <a href="tel:+380961111111" class="footer-contact-link"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
+
+        <div class="join-block">
+          <b class="text">присоединяйтесь</b>
+
+          <ul class="join-links-list">
+            <li class="item">
+              <a href="" class="social-link">
+                <svg class="command-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link" width="20" height="20">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link" width="20" height="20">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link" width="20" height="20">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
