--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,19 @@
 
         <ul class="contacts">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="contact-link icon-mail">
+              <svg class="link-icon" width="16" height="12">
+                <use href="./images/sprite.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contact-link"
-              >+38 096 111 11 11</a
+            <a href="tel:+380961111111" class="contact-link icon-smartphone">
+              <svg class="link-icon" width="10" height="16">
+                <use href="./images/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -49,7 +55,7 @@
 
     <main class="section">
       <div class="container">
-        <h1>Наши проекты</h1>
+        <h1 class="visually-hidden">Наши проекты</h1>
 
         <ul class="btn-list">
           <li class="item">
@@ -192,22 +198,59 @@
     </main>
 
     <footer class="footer-section">
-      <div class="container">
-        <a href="./index.html" class="logo footer-logo"
-          ><span class="accent-footer-logo">Web</span>Studio</a
-        >
-
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-
-        <address>
-          <a href="mailto:info@devstudio.com" class="footer-contact-link"
-            >info@devstudio.com</a
+      <div class="container flex-footer">
+        <div class="address-block">
+          <a href="./index.html" class="logo footer-logo"
+            ><span class="accent-footer-logo">Web</span>Studio</a
           >
-          <br />
-          <a href="tel:+380961111111" class="footer-contact-link"
-            >+38 096 111 11 11</a
-          >
-        </address>
+
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+
+          <address class="address">
+            <a href="mailto:info@devstudio.com" class="footer-contact-link"
+              >info@devstudio.com</a
+            >
+            <br />
+            <a href="tel:+380961111111" class="footer-contact-link"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
+
+        <div class="join-block">
+          <b class="text">присоединяйтесь</b>
+
+          <ul class="join-links-list">
+            <li class="item">
+              <a href="" class="social-link">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="social-link">
+                <svg class="command-icon">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
