--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header class="border">
+    <header>
       <div class="container main-nav">
         <a href="./index.html" class="logo"
           ><span class="accent-logo">Web</span>Studio</a
@@ -57,8 +57,104 @@
       <!-- Герой -->
 
       <section class="hero overlay">
-        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button" class="button primery">Заказать услугу</button>
+        <div class="centered">
+          <h1 class="hero-title">
+            Эффективные решения<br />для вашего бизнеса
+          </h1>
+          <button data-open-modal type="button" class="button primery">
+            Заказать услугу
+          </button>
+        </div>
+
+        <div class="backdrop is-hidden" data-backdrop>
+          <form class="modal">
+            <h2 class="form-title">Оставьте свои данные, мы вам перезвоним</h2>
+
+            <label class="form-field">
+              <span class="label-text">Имя</span>
+              <input
+                class="form-input"
+                type="text"
+                name="name"
+                placeholder=" "
+                required
+                minlength="3"
+              />
+              <!-- <span class="form-label">Имя</span> -->
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#person"></use>
+              </svg>
+            </label>
+
+            <label class="form-field">
+              <span class="label-text">Телефон</span>
+              <input
+                class="form-input"
+                type="tel"
+                name="tel"
+                placeholder=" "
+                required
+                minlength="9"
+                maxlength="13"
+              />
+              <!-- <span class="form-label">Телефон</span> -->
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#phone"></use>
+              </svg>
+            </label>
+
+            <label class="form-field">
+              <span class="label-text">Почта</span>
+              <input
+                class="form-input"
+                type="email"
+                name="mail"
+                placeholder=" "
+                required
+              />
+              <!-- <span class="form-label">Почта</span> -->
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#email"></use>
+              </svg>
+            </label>
+
+            <label class="form-field">
+              <span class="label-text">Комментарий</span>
+              <textarea
+                class="form-input"
+                class="comment"
+                name="comment"
+                rows="8"
+                placeholder="Введите текст"
+              ></textarea>
+            </label>
+
+            <label class="policy">
+              <input class="checkbox" type="checkbox" name="policy" required />
+              <span class="checkbox-icon"></span>
+              <span class="checkbox-label"
+                >Соглашаюсь с рассылкой и принимаю
+              </span>
+              <a class="policy-terms" href="">Условия договора</a></label
+            >
+
+            <br />
+
+            <div class="btn-center">
+              <button type="submit" class="button primery">Отправить</button>
+            </div>
+
+            <button
+              data-close-modal
+              class="close-modal-btn"
+              aria-label="закрыть окно"
+            >
+              <svg class="icon-close">
+                <use href="./images/sprite.svg#close"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </section>
 
       <!-- Особенности  -->
@@ -126,26 +222,35 @@
         <div class="container">
           <h2 class="section-title centered">Чем мы занимаемся</h2>
           <ul class="doing-list">
-            <li>
+            <li class="doing-item">
               <img
                 src="./images/1.jpg"
                 alt="разработака десктопных приложений"
                 width="370"
               />
+              <div class="duing-box">
+                <b class="doing-text">Десктопные приложения</b>
+              </div>
             </li>
-            <li>
+            <li class="doing-item">
               <img
                 src="./images/2.jpg"
                 alt="разработака мобильных приложений"
                 width="370"
               />
+              <div class="duing-box">
+                <b class="doing-text">Мобильные приложения</b>
+              </div>
             </li>
-            <li>
+            <li class="doing-item">
               <img
                 src="./images/3.jpg"
                 alt="разработака планшетных приложений"
                 width="370"
               />
+              <div class="duing-box">
+                <b class="doing-text">Дизайнерские решения</b>
+              </div>
             </li>
           </ul>
         </div>
@@ -373,7 +478,7 @@
         </div>
 
         <div class="join-block">
-          <b class="text">присоединяйтесь</b>
+          <b class="footer-title-text">присоединяйтесь</b>
 
           <ul class="join-links-list">
             <li class="item">
@@ -406,7 +511,35 @@
             </li>
           </ul>
         </div>
+
+        <div class="form-block">
+          <form>
+            <b class="footer-title-text">Подпишитесь на рассылку</b>
+
+            <div class="form-box">
+              <div class="form-field">
+                <label for="mail"></label>
+                <input
+                  class="footer-input"
+                  type="email"
+                  name="mail"
+                  id="mail"
+                  placeholder="E-mail"
+                />
+              </div>
+
+              <button type="button" class="button primery footet-btn">
+                Подписаться
+                <svg class="icon-send" width="24" height="24">
+                  <use href="./images/sprite.svg#send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
