--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,22 @@
 
         <ul class="projects-list">
           <li class="item">
-            <a href=""
-              ><img
-                src="./images/portfolio-1.jpg"
-                width="370"
-                alt="Технокряк"
-              />
+            <a href="">
+              <div class="project-box">
+                <img
+                  src="./images/portfolio-1.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="content">
                 <h2 class="title">Технокряк</h2>
                 <p class="text">Веб-сайт</p>
@@ -90,12 +100,21 @@
             </a>
           </li>
           <li class="item">
-            <a href=""
-              ><img
-                src="./images/portfolio-2.jpg"
-                width="370"
-                alt="Постер New Orlean vs Golden Star"
-              />
+            <a href=""></a>
+              <div class="project-box">
+                <img
+                  src="./images/portfolio-2.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
                 <p class="text">Дизайн</p>
@@ -103,12 +122,21 @@
             </a>
           </li>
           <li class="item">
-            <a href=""
-              ><img
-                src="./images/portfolio-3.jpg"
-                width="370"
-                alt="Ресторан Seafood"
-              />
+            <a href="">
+              <div class="project-box">
+                <img
+                  src="./images/portfolio-3.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Ресторан Seafood</h2>
                 <p class="text">Приложение</p>
@@ -117,11 +145,20 @@
           </li>
           <li class="item">
             <a href=""
-              ><img
-                src="./images/portfolio-4.jpg"
-                width="370"
-                alt="Проект Prime"
-              />
+              >              <div class="project-box">
+                <img
+                  src="./images/portfolio-4.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Проект Prime</h2>
                 <p class="text">Маркетинг</p>
@@ -130,11 +167,20 @@
           </li>
           <li class="item">
             <a href=""
-              ><img
-                src="./images/portfolio-5.jpg"
-                width="370"
-                alt="Проект Boxes"
-              />
+              >              <div class="project-box">
+                <img
+                  src="./images/portfolio-5.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Проект Boxes</h2>
                 <p class="text">Приложение</p>
@@ -143,11 +189,20 @@
           </li>
           <li class="item">
             <a href=""
-              ><img
-                src="./images/portfolio-6.jpg"
-                width="370"
-                alt="Inspiration has no Borders"
-              />
+              >              <div class="project-box">
+                <img
+                  src="./images/portfolio-6.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Inspiration has no Borders</h2>
                 <p class="text">Веб-сайт</p>
@@ -156,11 +211,20 @@
           </li>
           <li class="item">
             <a href=""
-              ><img
-                src="./images/portfolio-7.jpg"
-                width="370"
-                alt="Издание Limited Edition"
-              />
+              >              <div class="project-box">
+                <img
+                  src="./images/portfolio-7.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Издание Limited Edition</h2>
                 <p class="text">Дизайн</p>
@@ -169,11 +233,20 @@
           </li>
           <li class="item">
             <a href=""
-              ><img
-                src="./images/portfolio-8.jpg"
-                width="370"
-                alt="Проект LAB"
-              />
+              >              <div class="project-box">
+                <img
+                  src="./images/portfolio-8.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Проект LAB</h2>
                 <p class="text">Маркетинг</p>
@@ -182,11 +255,20 @@
           </li>
           <li class="item">
             <a href=""
-              ><img
-                src="./images/portfolio-9.jpg"
-                width="370"
-                alt="Growing Business"
-              />
+              >              <div class="project-box">
+                <img
+                  src="./images/portfolio-9.jpg"
+                  width="370"
+                  alt="Технокряк"
+                />
+                <div class="project-overlay">
+                  <p class="project-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="content">
                 <h2 class="title">Growing Business</h2>
                 <p class="text">Приложение</p>
@@ -218,38 +300,64 @@
         </div>
 
         <div class="join-block">
-          <b class="text">присоединяйтесь</b>
+          <b class="footer-title-text">присоединяйтесь</b>
 
           <ul class="join-links-list">
             <li class="item">
               <a href="" class="social-link">
-                <svg class="command-icon">
+                <svg class="command-icon" width="20" height="20">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="" class="social-link">
+              <a href="" class="social-link" width="20" height="20">
                 <svg class="command-icon">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="" class="social-link">
+              <a href="" class="social-link" width="20" height="20">
                 <svg class="command-icon">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
-              <a href="" class="social-link">
+              <a href="" class="social-link" width="20" height="20">
                 <svg class="command-icon">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="form-block">
+          <form>
+            <b class="footer-title-text">Подпишитесь на рассылку</b>
+
+            <div class="form-box">
+              <div class="form-field">
+                <label for="mail"></label>
+                <input
+                  class=""
+                  type="email"
+                  name="mail"
+                  id="mail"
+                  placeholder="E-mail"
+                />
+              </div>
+
+              <button type="button" class="button primery footet-btn">
+                Подписаться
+                <svg class="icon-send" width="24" height="24">
+                  <use href="./images/sprite.svg#send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
